--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   users_db:
     image: postgres:alpine
     env_file: 
@@ -12,26 +13,14 @@ services:
 
   publications_db:
     image: postgres:alpine
-    env_file: 
-      - .env     
+    env_file:
+      - .env
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_PUBLICATIONS}
       POSTGRES_USER: ${POSTGRES_USER_PUBLICATIONS}
       POSTGRES_DB: ${POSTGRES_DB_PUBLICATIONS}
     expose:
       - 5432
-
-  booking_db:
-    env_file: 
-      - .env   
-    image: postgres:alpine
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_BOOKING}
-      POSTGRES_USER: ${POSTGRES_USER_BOOKING}
-      POSTGRES_DB: ${POSTGRES_DB_BOOKING}
-    expose:
-      - 5432
-
 
 
   users_ms:
@@ -40,6 +29,7 @@ services:
       - .env 
     environment:
       DATABASE_URI_USERS: ${DATABASE_URI_USERS}
+      USERS_LOCALHOST: ${USERS_LOCALHOST}
       SECRET_KEY: ${SECRET_KEY}
       ALGORITHM: ${ALGORITHM}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}
@@ -71,33 +61,10 @@ services:
       EMAIL_ADDRESS: ${EMAIL_ADDRESS}
       PASSWORD_EMAIL: ${PASSWORD_EMAIL}
       SECRET_KEY_EMAIL: ${SECRET_KEY_EMAIL}
-      ALGORITHM_EMAIL: ${ALGORITHM_EMAIL}     
+      ALGORITHM_EMAIL: ${ALGORITHM_EMAIL}
     build: ../publications
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
     ports:
       - 8002:8000
     depends_on:
       - publications_db
-
-
-  booking_ms:
-    restart: always
-    env_file: 
-      - .env  
-    environment:
-      DATABASE_URI_USERS: ${DATABASE_URI_USERS}
-      SECRET_KEY: ${SECRET_KEY}
-      ALGORITHM: ${ALGORITHM}
-      ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}
-      SMTP_SERVER: ${SMTP_SERVER}
-      SMTP_PORT: ${SMTP_PORT}
-      EMAIL_ADDRESS: ${EMAIL_ADDRESS}
-      PASSWORD_EMAIL: ${PASSWORD_EMAIL}
-      SECRET_KEY_EMAIL: ${SECRET_KEY_EMAIL}
-      ALGORITHM_EMAIL: ${ALGORITHM_EMAIL}        
-    build: ../booking
-    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-    ports:
-      - 8003:8000
-    depends_on:
-      - booking_db
