--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,17 @@ services:
     expose:
       - 5432
 
+  activity_db:
+    image: postgres:alpine
+    env_file:
+      - .env
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_ACTIVITY}
+      POSTGRES_USER: ${POSTGRES_USER_ACTIVITY}
+      POSTGRES_DB: ${POSTGRES_DB_ACTIVITY}
+    expose:
+      - 5432
+
 
   users_ms:
     restart: always
@@ -68,3 +79,28 @@ services:
       - 8002:8000
     depends_on:
       - publications_db
+
+
+  activity_ms:
+    restart: always
+    env_file: 
+      - .env
+    environment:
+      DATABASE_URI_ACTIVITY: ${DATABASE_URI_ACTIVITY}
+      ACTIVITY_LOCALHOST: ${PUBLICATIONS_LOCALHOST}
+      USERS_LOCALHOST: ${USERS_LOCALHOST}
+      SECRET_KEY: ${SECRET_KEY}
+      ALGORITHM: ${ALGORITHM}
+      ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}
+      SMTP_SERVER: ${SMTP_SERVER}
+      SMTP_PORT: ${SMTP_PORT}
+      EMAIL_ADDRESS: ${EMAIL_ADDRESS}
+      PASSWORD_EMAIL: ${PASSWORD_EMAIL}
+      SECRET_KEY_EMAIL: ${SECRET_KEY_EMAIL}
+      ALGORITHM_EMAIL: ${ALGORITHM_EMAIL}
+    build: ../activity
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+    ports:
+      - 8003:8000
+    depends_on:
+      - activity_db
