--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,6 @@ services:
     expose:
       - 5432
 
-  publications_db:
-    image: postgres:alpine
-    env_file:
-      - .env
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_PUBLICATIONS}
-      POSTGRES_USER: ${POSTGRES_USER_PUBLICATIONS}
-      POSTGRES_DB: ${POSTGRES_DB_PUBLICATIONS}
-    expose:
-      - 5432
 
   activity_db:
     image: postgres:alpine
@@ -37,48 +27,21 @@ services:
   users_ms:
     restart: always
     env_file: 
-      - .env 
+      - .env
     environment:
-      DATABASE_URI_USERS: ${DATABASE_URI_USERS}
+      DATABASE_URI: ${DATABASE_URI_USERS}
       USERS_LOCALHOST: ${USERS_LOCALHOST}
       SECRET_KEY: ${SECRET_KEY}
       ALGORITHM: ${ALGORITHM}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}
-      SMTP_SERVER: ${SMTP_SERVER}
-      SMTP_PORT: ${SMTP_PORT}
-      EMAIL_ADDRESS: ${EMAIL_ADDRESS}
-      PASSWORD_EMAIL: ${PASSWORD_EMAIL}
-      SECRET_KEY_EMAIL: ${SECRET_KEY_EMAIL}
-      ALGORITHM_EMAIL: ${ALGORITHM_EMAIL}
-    build: ../users   
+
+    build: ../users
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
     ports:
       - 8001:8000
     depends_on:
       - users_db
 
-
-  publications_ms:
-    restart: always
-    env_file: 
-      - .env
-    environment:
-      DATABASE_URI_USERS: ${DATABASE_URI_USERS}
-      SECRET_KEY: ${SECRET_KEY}
-      ALGORITHM: ${ALGORITHM}
-      ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}
-      SMTP_SERVER: ${SMTP_SERVER}
-      SMTP_PORT: ${SMTP_PORT}
-      EMAIL_ADDRESS: ${EMAIL_ADDRESS}
-      PASSWORD_EMAIL: ${PASSWORD_EMAIL}
-      SECRET_KEY_EMAIL: ${SECRET_KEY_EMAIL}
-      ALGORITHM_EMAIL: ${ALGORITHM_EMAIL}
-    build: ../publications
-    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-    ports:
-      - 8002:8000
-    depends_on:
-      - publications_db
 
 
   activity_ms:
@@ -87,20 +50,16 @@ services:
       - .env
     environment:
       DATABASE_URI_ACTIVITY: ${DATABASE_URI_ACTIVITY}
-      ACTIVITY_LOCALHOST: ${PUBLICATIONS_LOCALHOST}
-      USERS_LOCALHOST: ${USERS_LOCALHOST}
+      ACTIVITY_LOCALHOST: ${ACTIVITY_LOCALHOST}
       SECRET_KEY: ${SECRET_KEY}
       ALGORITHM: ${ALGORITHM}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}
-      SMTP_SERVER: ${SMTP_SERVER}
-      SMTP_PORT: ${SMTP_PORT}
-      EMAIL_ADDRESS: ${EMAIL_ADDRESS}
-      PASSWORD_EMAIL: ${PASSWORD_EMAIL}
-      SECRET_KEY_EMAIL: ${SECRET_KEY_EMAIL}
-      ALGORITHM_EMAIL: ${ALGORITHM_EMAIL}
+      AUTH_URL: ${AUTH_URL}
     build: ../activity
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
     ports:
       - 8003:8000
     depends_on:
       - activity_db
+
+  
