--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,14 @@ services:
       - 5432
 
 
-  activity_db:
+  publication_db:
     image: postgres:alpine
     env_file:
       - .env
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_ACTIVITY}
-      POSTGRES_USER: ${POSTGRES_USER_ACTIVITY}
-      POSTGRES_DB: ${POSTGRES_DB_ACTIVITY}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_PUBLICATION}
+      POSTGRES_USER: ${POSTGRES_USER_PUBLICATION}
+      POSTGRES_DB: ${POSTGRES_DB_PUBLICATION}
     expose:
       - 5432
 
@@ -34,6 +34,13 @@ services:
       SECRET_KEY: ${SECRET_KEY}
       ALGORITHM: ${ALGORITHM}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}
+      SMTP_SERVER: ${SMTP_SERVER}
+      SMTP_PORT: ${SMTP_PORT}
+      EMAIL_ADDRESS: ${EMAIL_ADDRESS}
+      PASSWORD_EMAIL: ${PASSWORD_EMAIL}
+      SECRET_KEY_EMAIL: ${SECRET_KEY_EMAIL}
+      ALGORITHM_EMAIL: ${ALGORITHM_EMAIL}
+      DSN_SENTRY_USERS: ${DSN_SENTRY_USERS}
 
     build: ../users
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
@@ -44,22 +51,30 @@ services:
 
 
 
-  activity_ms:
+  publication_ms:
     restart: always
     env_file: 
       - .env
     environment:
-      DATABASE_URI_ACTIVITY: ${DATABASE_URI_ACTIVITY}
-      ACTIVITY_LOCALHOST: ${ACTIVITY_LOCALHOST}
+      DATABASE_URI_ACTIVITY: ${DATABASE_URI_PUBLICATION}
+      ACTIVITY_LOCALHOST: ${PUBLICATION_LOCALHOST}
       SECRET_KEY: ${SECRET_KEY}
       ALGORITHM: ${ALGORITHM}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}
       AUTH_URL: ${AUTH_URL}
+      API_KEY_FIREBASE: ${API_KEY_FIREBASE}
+      AUTH_DOMAIN_FIREBASE: ${AUTH_DOMAIN_FIREBASE}
+      PROJECT_ID_FIREBASE: ${PROJECT_ID_FIREBASE}
+      STORAGE_BUCKET_FIREBASE: ${STORAGE_BUCKET_FIREBASE}
+      MESSAGING_SENDER_ID_FIREBASE: ${MESSAGING_SENDER_ID_FIREBASE}
+      APP_ID_FIREBASE: ${APP_ID_FIREBASE}
+      DATABASE_URL_FIREBASE: ${DATABASE_URL_FIREBASE}
+      DSN_SENTRY_PUBLICATIONS: ${DSN_SENTRY_PUBLICATIONS}
     build: ../activity
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
     ports:
       - 8003:8000
     depends_on:
-      - activity_db
+      - publication_db
 
   
